--- a/watch/templates/registration/base.html
+++ b/watch/templates/registration/base.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     {% endblock %}
   </head>
-  <body style ="background-image:url('{% static 'images/logo.jpg' %}')">
+  <body style ="background-image:url('{% static 'images/test.jpg' %}')">
 
     <main>
       {% block content %}
