--- a/watch/templates/registration/login.html
+++ b/watch/templates/registration/login.html
@@ -10,7 +10,7 @@
         {% for field in form %}
 
           <br>
-          {{ field }}
+           {{ field }}
           {% for error in field.errors %}
             <p class="alert alert-danger">{{ error }}</p>
           {% endfor %}
@@ -18,13 +18,14 @@
 
         {% endfor %}
         <br>
-        <input type="submit" value="login" />
+        <input type="submit" value="login"  style="border: solid 2px black; border-radius: 10px; margin-top: 5px;"/>
         <input type="hidden" name="next" value="{{next}}"  />
 
       </form>
     </div>
-    <div class="well account-w text-center">Dont't have an account?
+    <div class="well account-w text-center" >Dont't have an account?
       <a href="{% url 'signup' %}">Sign up</a>
     </div>
   </div>
-{% endblock %}
+{% endblock %} 
+
