--- a/watch/templates/registration/login.html
+++ b/watch/templates/registration/login.html
@@ -4,7 +4,7 @@
   {{ block.super }}
   <div class="wrapper">
     <div class="well signup text-center">
-      <h2 class="logo">Iclone</h2>
+      <h2 class="logo">Neighwatch</h2>
       <form method="post">
         {% csrf_token %}
         {% for field in form %}
