--- a/watch/templates/main_templates/base.html
+++ b/watch/templates/main_templates/base.html
@@ -17,7 +17,7 @@
        {% include 'navbar.html' %}
 
     {% if user.is_authenticated %}
-    <div class="content" style="padding-top: 80px;">
+    <div class="content" >
     {% else %}
     <div class="content">
     {% endif %}
