--- a/watch/templates/navbar.html
+++ b/watch/templates/navbar.html
@@ -45,7 +45,7 @@
                 <div class = 'col-md-4'>
                     <ul class="nav navbar-nav" style = "padding-top:20px; text-align:right;"> 
                         <a href="{% url 'home' %}">Hoods</a>  
-                        <a href="{% url 'bussinesses' %}">Add a Neighborhood</a>
+                        <a href="{% url 'bussinesses' %}">Bussinesses</a>
                     
                         <a href="{% url 'logout' %}">Logout</a>
 
